# cpp-httplib-webserver-adapter

./: .appveyor.yml  .codecov.yml  .travis.yml  BUILD.md  CMakeLists.txt  README.md  RELEASENOTES.md  conanfile.py  vs2022.conanprofile
.github/workflows/: archive-docs.yml
ci/pipelines/: Build.jenkinsfile  Release.jenkinsfile
src/HttpLibWebServerAdapter/: CMakeLists.txt  Client.cpp  Client.h  ClientFactory.cpp  ClientFactory.h  SecuredClient.cpp  SecuredClient.h  SecuredServer.cpp  SecuredServer.h  Server.cpp  Server.h  ServerFactory.cpp  ServerFactory.h
src/HttpLibWebServerAdapter/Model/: WebServicesMgr.cpp  WebServicesMgr.h
src/HttpLibWebServerAdapter/Services/: HttpLibRequestParserService.cpp  HttpLibRequestParserService.h  HttpLibResponseBuilderService.cpp  HttpLibResponseBuilderService.h  IHttpLibRequestParserService.h  IHttpLibResponseBuilderService.h  IReplyCORSHeadersBuilderService.h  IRequestHandlingService.h  IRequestURIParserService.h  ReplyCORSHeadersBuilderService.cpp  ReplyCORSHeadersBuilderService.h  RequestHandlingService.cpp  RequestHandlingService.h  RequestURIParserService.cpp  RequestURIParserService.h
src/httplib/: httplib.h
test/BoostAsioWebServerAdapterTest/: stdafx.h
test/HttpLibSampleWebServer/: CMakeLists.txt  HttpLibSampleWebServer.cpp
test/HttpLibWebServerAdapterTest/: CMakeLists.txt  stdafx.h
test/HttpLibWebServerAdapterTest/Helpers/: HttpClient.cpp  HttpClient.h  HttpsClient.cpp  HttpsClient.h
test/HttpLibWebServerAdapterTest/Tests/: BaseServerTest.cpp  BaseServerTest.h  ReplyCORSHeadersBuilderServiceTest.cpp  RequestHandlingServiceTest.cpp  RequestURIParserServiceTest.cpp  SecuredServerTest.cpp  ServerTest.cpp  ServerTestData.cpp  ServerTestData.h
test_package/: CMakeLists.txt  HttpLibWebServerAdapterExample.cpp  conanfile.py
